# sco

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  assign.hpp  main.cpp  sco.hpp
example/: CMakeLists.txt  example.cpp
example/httpcache/: CMakeLists.txt  main.cpp
example/httpcache/cmake/: build_external_project.cmake
include/sco/: all-inl.hpp  all.hpp  assign.hpp  async-inl.hpp  async.hpp  awaiter.hpp  callback-inl.hpp  callback.hpp  common.h  future-inl.hpp  future.hpp  promise-inl.hpp  promise.hpp  sco.hpp
src/: sco.cpp
